# cyberspace

./: .Xdefaults  .csirc  .emacs  .gitconfig  .gitignore  .hints  .sbclrc  .tcshrc  .twmrc  .zshrc  CLAUDE.html  CLAUDE.md  CONTEXT.md  DESIGN-SPECIFICATIONS.html  DESIGN-SPECIFICATIONS.md  DESIGNER-NOTES  DESIGNER-NOTES.md  DIRECTORY-README.md  DIRECTORY-SUMMARY.md  LICENSE  NO-WEBSOCKETS.md  PERMUTED-INDEX.html  PERMUTED-INDEX.md  README.html  README.md  ROADMAP.md  SECURITY-AUDIT-SETUP.md  bootstrap.sh  break-glass  common-lisp-hyperspec.html  common-lisp-hyperspec.md  cyberspace-catalog.html  cyberspace-directory.html  directory-example.scm  directory-parser.scm  directory-repl.scm  directory.html  directory.scm  distributed-agent-architecture.html  distributed-agent-architecture.md  (+13 more)
spki/: BOOTSTRAP.sh  CLI-GUIDE.md  Makefile  dune-project  spki.opam
spki/_build/: .db  .digest-db  log
spki/_build/default/: META.spki  README.md  spki.dune-package  spki.install  spki.opam
spki/_build/default/.dune/: configurator  configurator.v2
spki/_build/default/src/: crypto.ml  spki.cma  spki.cmxa  spki.cmxs  spki.ml-gen  types.ml
spki/coq/: INSTALL.md  Makefile  README.md  Signature.v  _CoqProject
spki/examples/: dune  simple_delegation.ml
spki/scheme/: SESSION-SUMMARY.md  VAULT.md  alice-to-bob-prop.cert  alice-to-bob.cert  alice.private  alice.pub  alice.public  audit-trail.txt  audit.import.scm  audit.scm  auto-enroll.scm  board.scm  bob-to-carol.cert  bob.private  bob.pub  bob.public  build.scm  capability.scm  carol.private  carol.pub  carol.public  catalog.scm  cert.import.scm  cert.scm  crypto-ffi.c  crypto-ffi.import.scm  crypto-ffi.scm  cs  cyberspace  cyberspace-bin  cyberspace-repl  cyberspace-repl.scm  cyberspace-server.scm  cyberspace.scm  demo-cyberspace.scm  deploy.sig  display.scm  edt.scm  enroll.scm  filetype.scm  (+101 more)
spki/scheme/.cyberspace/: SESSION-2026-01-05.md  STATE.md
spki/scheme/.vault/: lamport-clock  node-hardware  pending-enrollments.sexp  repl-history
spki/scheme/.vault/audit/: 1.sexp  2.sexp  3.sexp  sync-1768085877.sexp  sync-1768086023.sexp  sync-1768087074.sexp  sync-1768088689.sexp  sync-1768089672.sexp  sync-1768090263.sexp  sync-1768090578.sexp  sync-1768090615.sexp  sync-1768091048.sexp  sync-1768091232.sexp  sync-1768091485.sexp  sync-1768091516.sexp  sync-1768091635.sexp  sync-1768093143.sexp  sync-1768093574.sexp  sync-1768093632.sexp  sync-1768094268.sexp  sync-1768094822.sexp  sync-1768094982.sexp  sync-1768095022.sexp  sync-1768095155.sexp  sync-1768095194.sexp  sync-1768095321.sexp  sync-1768095594.sexp  sync-1768095634.sexp  sync-1768095657.sexp  sync-1768096129.sexp  sync-1768096498.sexp  sync-1768096857.sexp  sync-1768096973.sexp  sync-1768097115.sexp  sync-1768097303.sexp  sync-1768162313.sexp  sync-1768162334.sexp  sync-1768162370.sexp  sync-1768162456.sexp
spki/scheme/.vault/certs/: membership.sexp
spki/scheme/.vault/keys/: starlight.cert
spki/scheme/.vault/keystore/: realm.key  realm.pub
spki/scheme/.vault/releases/: 0.1.0.sig  1.0.3.sig
spki/scheme/app/: .gitignore  Cyberspace.icns  build.sh  main.m
spki/scheme/chez/: .gitignore  PORTING.md  build-crypto-bridge.sh  build-objc-bridge.sh  build-pq-bridge.sh  build-tcp-bridge.sh  build.ss  crypto-bridge.c  cyberspace.sps  cyberspace.ss  fuse-bridge.c  metadata-bridge.c  objc-bridge.m  osc-bridge.c  pq-bridge.c  repl.sps  repl.ss  scrutinize.sps  seal  seal.ss  spki-cert.sps  spki-keygen.sps  spki-show.sps  spki-verify.sps  tcp-bridge.c  test-audit.ss  test-capability-merkle-security.ss  test-capability.ss  test-cert-bloom.ss  test-compat-sexp.ss  test-crypto.ss  test-enroll-auto-enroll.ss  test-filetype-http-osc-rnbo-metadata.ss  test-fips-forge-keyring.ss  test-gossip.ss  test-level10.ss  test-objc.ss  test-os-catalog.ss  test-repl-build.ss  test-script-forum-portal-mdns.ss  (+4 more)
spki/scheme/chez/app/: build.sh  cyberspace-server.sps
spki/scheme/chez/application/: .gitignore  build.sh  cyberspace-server.sps  main-native.m  scheme-bridge.c  scheme-bridge.h
spki/scheme/chez/boot/: repl.sps
spki/scheme/chez/cyberspace/: audit.sls  auto-enroll.sls  bloom.sls  capability.sls  catalog.sls  cert.sls  crypto-ffi.sls  display.sls  edt.sls  enroll.sls  filetype.sls  fips.sls  forge.sls  forum.sls  fuse-bridge.c  fuse-ffi.sls  gossip.sls  http.sls  info.sls  inspector.sls  keyring.sls  lazy-chunks.sls  lineage.sls  mdns.sls  merkle.sls  metadata-ffi.sls  objc.sls  os.sls  osc.sls  portal.sls  pq-crypto.sls  rnbo.sls  rope.sls  script.sls  security.sls  server.sls  sexp.sls  tcp.sls  tty-bridge.c  tty-ffi.sls  (+4 more)
spki/scheme/chez/tests/: run-all.sh  (+17 more)
spki/scheme/chicken/: .gitignore  COMPARISON.md  DEPENDENCIES  _cyberspace  cyberspace-bin  deploy.scm  eggs.txt  freckles  install-native.sh  install-repl.sh  sanity.scm  sicp  spki-keygen.scm  sync  test-bloom.scm  test-capability.scm  test-cert  test-cluster.sh  test-crypto-simple  test-crypto-simple.scm  test-direct-ffi-bin  test-direct-ffi.scm  test-exact-copy-bin  test-exact-copy.scm  test-gossip.scm  test-hash-direct.scm  test-init-check  test-join.scm  test-keypair-simple.scm  test-mdns.scm  test-no-print.scm  test-sexp-string  test-sexp-string.scm  test-sexp.scm  test-sha512-simple  test-sha512-simple.scm  test-sodium-minimal-fresh  test-type-bin  test-use-vectors.scm  test-values-bin  (+2 more)
spki/scheme/config/: kitty.conf
spki/scheme/docs/: .htaccess  ARCHITECTURE-NATIVE-UI.md  DECLARATION-BOURDAIN.txt  DESIGNER-NOTES.md  LIBRARY-OF-CYBERSPACE.md  README.md  audit.1  cyberspace-repl.1  repl.1  seal.1
spki/scheme/eggs/: .gitignore
spki/scheme/lib/: libfuse-t.dylib
spki/scheme/residents/: pencil.scm  schemacs.scm
spki/src/: crypto.ml  dune  operations.ml  sexp.ml
spki/tcb/: README.md  build-liboqs.sh  dune  export.ml  export_stubs.c  pq_stubs.c  signature.ml  signature_stubs.c  spki_tcb.ml  tcb_stubs.c  test_pq.ml  test_signature.ml  test_tcb.ml
spki/tcb/coq/: SpkiTcb.v  dune  spki_tcb.ml  spki_tcb_extracted.ml  spki_tcb_extracted.mli  test_extracted.ml  test_properties.ml
spki/test/: dune  test_spki.ml
(+1668 files in other folders)
