(lang dune 3.0)
(name spki)
(version 0.1.0)

(generate_opam_files true)

(source (github ddp/cyberspace))
(authors "ddp@eludom.net" "derrell@mit.edu")
(maintainers "ddp@eludom.net")
(license MIT)

(package
 (name spki)
 (synopsis "SPKI/SDSI certificate system - s-expression based authorization")
 (description "Reference implementation of SPKI (Simple Public Key Infrastructure) with SDSI (Simple Distributed Security Infrastructure). Provides s-expression based certificates, direct trust delegation, and authorization chain verification. No hierarchical CAs, keys are principals.")
 (depends
  (ocaml (>= 4.14))
  dune
  (base64 (>= 3.5.0))
  (cryptokit (>= 1.17))
  (alcotest :with-test)))
