;; SPKI TCB - Trusted Computing Base Build Configuration
;;
;; Builds the minimal security-critical code:
;; - spki_tcb.ml (unified TCB: principals, tags, certificates, authorization)
;; - tcb_stubs.c (C FFI to libsodium)
;; - pq_stubs.c (C FFI to liboqs for post-quantum signatures)
;;
;; TCB Properties:
;; - Approximately 400 lines of OCaml, 500 lines of C
;; - Dependencies: libsodium (classical) + liboqs (post-quantum) + libkeccak (SHAKE256)
;; - Coq extractable (see coq/ directory for formal specifications)
;; - All comparisons are constant-time (timing attack resistant)
;; - Post-quantum secure: ML-DSA-65 (FIPS 204), SLH-DSA (FIPS 205)

(library
 (name spki_tcb)
 (public_name spki.tcb)
 (modules spki_tcb)
 (foreign_stubs
  (language c)
  (names tcb_stubs pq_stubs)
  (flags -I/Users/ddp/cyberspace/spki/tcb/liboqs-local/include -I/opt/homebrew/include))
 (c_library_flags (-L/Users/ddp/cyberspace/spki/tcb/liboqs-local/lib -loqs -L/opt/homebrew/lib -lsodium -lkeccak))
 (libraries unix)
 (flags (:standard -w -27)))

;; Legacy signature module (for backwards compatibility)
(library
 (name spki_signature)
 (public_name spki.signature)
 (modules signature)
 (foreign_stubs
  (language c)
  (names signature_stubs)
  (flags -I/opt/homebrew/include))
 (c_library_flags (-L/opt/homebrew/lib -lsodium))
 (flags (:standard -w -27)))

;; Test executable for unified TCB
(executable
 (name test_tcb)
 (modules test_tcb)
 (libraries spki_tcb))

;; Test executable for legacy signature module
(executable
 (name test_signature)
 (modules test_signature)
 (libraries spki_signature))

;; Test executable for post-quantum signatures
(executable
 (name test_pq)
 (modules test_pq)
 (libraries spki_tcb))

(rule
 (alias runtest)
 (deps test_tcb.exe test_signature.exe test_pq.exe)
 (action (progn
          (run ./test_tcb.exe)
          (run ./test_signature.exe)
          (run ./test_pq.exe))))
